force-app/main/default/objects/Offer__c/fields/AccountFullName__c.field-meta.xml
<CustomField>
    <fullName>AccountFullName__c</fullName>
    <label>Полное название предприятия</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>