force-app/main/default/objects/Offer__c/fields/Changed__c.field-meta.xml
<CustomField>
    <fullName>Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Изменено</label>
    <type>Checkbox</type>
</CustomField>