force-app/main/default/objects/Offer__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>Город</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Москва</fullName>
            </value>
            <value>
                <fullName>Московская область</fullName>
            </value>
            <value>
                <fullName>Санкт-Петербург</fullName>
            </value>
            <value>
                <fullName>Брянск</fullName>
            </value>
            <value>
                <fullName>Барнаул</fullName>
            </value>
            <value>
                <fullName>Белгород</fullName>
            </value>
            <value>
                <fullName>Владивосток</fullName>
            </value>
            <value>
                <fullName>Владимир</fullName>
            </value>
            <value>
                <fullName>Волгоград</fullName>
            </value>
            <value>
                <fullName>Воронеж</fullName>
            </value>
            <value>
                <fullName>Екатеринбург</fullName>
            </value>
            <value>
                <fullName>Иваново</fullName>
            </value>
            <value>
                <fullName>Ижевск</fullName>
            </value>
            <value>
                <fullName>Калуга</fullName>
            </value>
            <value>
                <fullName>Казань</fullName>
            </value>
            <value>
                <fullName>Курс</fullName>
            </value>
            <value>
                <fullName>Коломна</fullName>
            </value>
            <value>
                <fullName>Краснодар</fullName>
            </value>
            <value>
                <fullName>Красноярск</fullName>
            </value>
            <value>
                <fullName>Липецк</fullName>
            </value>
            <value>
                <fullName>Нижний Новгород</fullName>
            </value>
            <value>
                <fullName>Новосибирск</fullName>
            </value>
            <value>
                <fullName>Омск</fullName>
            </value>
            <value>
                <fullName>Пермь</fullName>
            </value>
            <value>
                <fullName>Ростов-на-Дону</fullName>
            </value>
            <value>
                <fullName>Рязань</fullName>
            </value>
            <value>
                <fullName>Самара</fullName>
            </value>
            <value>
                <fullName>Саратов</fullName>
            </value>
            <value>
                <fullName>Смоленск</fullName>
            </value>
            <value>
                <fullName>Сочи</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>