force-app/main/default/objects/Offer__c/fields/OGRN__c.field-meta.xml
<CustomField>
    <fullName>OGRN__c</fullName>
    <label>ОГРН</label>
    <length>13</length>
    <type>Text</type>
</CustomField>